<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_pin"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_gear"
            android:title="@string/menu_settings" />
    </group>
</menu>