<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="canteenViewModel"
            type="com.soundsonic.simplemensa.ui.home.CanteenViewModel" />
        <variable
            name="userViewModel"
            type="com.soundsonic.simplemensa.ui.home.UserViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/canteen_recycler_view"
            android:paddingTop="8dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:canteens="@{canteenViewModel.canteens}"
            app:favourites="@{userViewModel.favouriteCanteenIds}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
