...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/meal_recycler_view"
                android:paddingTop="8dp"
                android:clipToPadding="false"
                android:visibility="@{viewModel.meals.empty ? View.GONE : View.VISIBLE}"
                app:meals="@{viewModel.meals}">

            </androidx.recyclerview.widget.RecyclerView>
...
